fix gap between year bar and buttons on android after double tap

--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ img {
 }
 
 #footer {
-	position: fixed;
+	position: absolute;
 	color: #ddd;
 	background: rgba(0, 0, 0, 0.5);
 	display: flex;
